--- a/vcx/ci/Jenkinsfile
+++ b/vcx/ci/Jenkinsfile
@@ -59,19 +59,16 @@ def mainUbuntu() {
             }
             
             stage('Build Libvcx Image, Test, Copy Debian to Volume') {
-                def uid = getUserId()
+
                 // ******** Build the libvcx base image (runs tests and creates debian automatically) ********
                 def libvcx = docker.build("libvcx", "--build-arg uid=${uid} --build-arg output_dir=${volumeInternalDir} -f ${libvcxDockerfile} .")
-                libvcx.inside("-v $volumeName:$volumeInternalDir") {
-                    sh "cp /sdk/vcx/libvcx/target/debian/*.deb ${volumeInternalDir}"
-                }
             }
 
             stage('Build Node Image, Test, Copy Package to Volume') {
                 // ******** Builds and tests the Node JS Wrapper *******
                 def node = docker.build("node", "-f ${nodeDockerfile}  .")
-                node.inside("-v $volumeName:$volumeInternalDir") {
-                    sh "/sdk/vcx/wrappers/node/ci/test-and-package.sh"
+                node.inside() {
+                    sh "/sdk/vcx/wrappers/node/ci/test.sh"
                 }
                 
             }
@@ -79,46 +76,39 @@ def mainUbuntu() {
             stage('Build Python Image, Test, Copy Package to Volume') {
                 // ******** Builds and tests the Python Wrapper *******
                 def python = docker.build("python", "-f ${pythonDockerfile} .")
-                python.inside("-v $volumeName:$volumeInternalDir") {
-                    sh "/sdk/vcx/wrappers/python3/ci/test-and-package.sh"
-                }
-            }
-
-            stage('Checking Volume') {
-                def libindy = docker.build("libindy", "-f ${libindyDockerfile} .")
-                libindy.inside("-v $volumeName:$volumeInternalDir") {
-                    sh "ls -al $volumeInternalDir"
+                python.inside() {
+                    sh "/sdk/vcx/wrappers/python3/ci/test.sh"
                 }
             }
 
             // sh "docker run --rm -v $volumeName:$volumeInternalDir ubuntu:16.04 sh -c \'ls ${volumeInternalDir}\''
             if (env.BRANCH_NAME == "master") {
-                stage('Publish') {
-                    // ******** PUBLISHING (artifacts are in a Docker Volume) ********
-                    sh "docker build -t publish -f vcx/ci/Dockerfile-publish ."
-                    withCredentials([usernameColonPassword(credentialsId: 'jenkins-kraken-svc', variable: 'KRAKEN_CREDENTIALS')]) {
-                        def publish = docker.build('publish', "-f vcx/ci/Dockerfile-publish .")
-                        publish.inside("--network=host -v $volumeName:$volumeInternalDir") {
-                            // ******** Publish Libvcx Debian to repo ********
-                            sh "/sdk/vcx/ci/scripts/publish.sh \"${KRAKEN_CREDENTIALS}\" \"libvcx*.deb\" https://kraken.corp.evernym.com/repo/portal_dev/upload"
-                            sh "/sdk/vcx/ci/scripts/publish.sh \"${KRAKEN_CREDENTIALS}\" \"libvcx*.deb\" https://kraken.corp.evernym.com/repo/agency_dev/upload"
+                // stage('Publish') {
+                //     // ******** PUBLISHING (artifacts are in a Docker Volume) ********
+                //     sh "docker build -t publish -f vcx/ci/Dockerfile-publish ."
+                //     withCredentials([usernameColonPassword(credentialsId: 'jenkins-kraken-svc', variable: 'KRAKEN_CREDENTIALS')]) {
+                //         def publish = docker.build('publish', "-f vcx/ci/Dockerfile-publish .")
+                //         publish.inside("--network=host -v $volumeName:$volumeInternalDir") {
+                //             // ******** Publish Libvcx Debian to repo ********
+                //             sh "/sdk/vcx/ci/scripts/publish.sh \"${KRAKEN_CREDENTIALS}\" \"libvcx*.deb\" https://kraken.corp.evernym.com/repo/portal_dev/upload"
+                //             sh "/sdk/vcx/ci/scripts/publish.sh \"${KRAKEN_CREDENTIALS}\" \"libvcx*.deb\" https://kraken.corp.evernym.com/repo/agency_dev/upload"
                             
-                            // ******** Publish Npm Package to filely repo ********
-                            sh "/sdk/vcx/ci/scripts/publish.sh \"${KRAKEN_CREDENTIALS}\" \"*.tgz\" https://kraken.corp.evernym.com/repo/npm/upload"
+                //             // ******** Publish Npm Package to filely repo ********
+                //             sh "/sdk/vcx/ci/scripts/publish.sh \"${KRAKEN_CREDENTIALS}\" \"*.tgz\" https://kraken.corp.evernym.com/repo/npm/upload"
                 
-                            // ******** Publish vcx Debian To Repo (NPM PACKAGES) 
-                            sh "/sdk/vcx/ci/scripts/publish.sh \"${KRAKEN_CREDENTIALS}\" \"vcx_*.deb\" https://kraken.corp.evernym.com/repo/agency_dev/upload"
-                            sh "/sdk/vcx/ci/scripts/publish.sh \"${KRAKEN_CREDENTIALS}\" \"vcx_*.deb\" https://kraken.corp.evernym.com/repo/portal_dev/upload"
+                //             // ******** Publish vcx Debian To Repo (NPM PACKAGES) 
+                //             sh "/sdk/vcx/ci/scripts/publish.sh \"${KRAKEN_CREDENTIALS}\" \"vcx_*.deb\" https://kraken.corp.evernym.com/repo/agency_dev/upload"
+                //             sh "/sdk/vcx/ci/scripts/publish.sh \"${KRAKEN_CREDENTIALS}\" \"vcx_*.deb\" https://kraken.corp.evernym.com/repo/portal_dev/upload"
 
-                            // ******** Archive with Jenkins ********
-                            sh "mkdir -p vcx/output"
-                            sh "cp $volumeInternalDir/* vcx/output"
-                            sh "ls $volumeInternalDir"
-                            archiveArtifacts allowEmptyArchive: true, artifacts: 'vcx/output/*'
+                //             // ******** Archive with Jenkins ********
+                //             sh "mkdir -p vcx/output"
+                //             sh "cp $volumeInternalDir/* vcx/output"
+                //             sh "ls $volumeInternalDir"
+                //             archiveArtifacts allowEmptyArchive: true, artifacts: 'vcx/output/*'
 
-                        }
-                    }
-                }
+                //         }
+                //     }
+                // }
             }
         } catch (Exception ex) {
             currentBuild.result = "FAILED"
