--- a/vcx/ci/Jenkinsfile
+++ b/vcx/ci/Jenkinsfile
@@ -20,8 +20,8 @@ def testing() {
     stage('Testing') {
         parallel([
             'Xenial' : { mainUbuntu() },
-            // 'Android': { android() },
-            // 'iOS' : { ios() }
+            'Android': { android() },
+            'iOS' : { ios() }
         ])
     }
 }
@@ -94,36 +94,32 @@ def mainUbuntu() {
                     sh 'vcx/wrappers/python3/ci/package.sh'
                 }
             }
-            
+
+            // debug info
             sh 'ls -al output'
             
-            // if (env.BRANCH_NAME == "master") {
+            if (env.BRANCH_NAME == "master") {
                 stage('Publish') {
-                //     // ******** PUBLISHING (artifacts are in a Docker Volume) ********
-                //     sh "docker build -t publish -f vcx/ci/Dockerfile-publish ."
+                    // ******** PUBLISHING (artifacts are in a Docker Volume) ********
                     withCredentials([usernameColonPassword(credentialsId: 'jenkins-kraken-svc', variable: 'KRAKEN_CREDENTIALS')]) {
                         libvcx.inside("--network=host") {
-                //             // ******** Publish Libvcx Debian to repo ********
+                            // ******** Publish Libvcx Debian to repo ********
                             sh "vcx/ci/scripts/publish.sh \"${KRAKEN_CREDENTIALS}\" \"libvcx*.deb\" https://kraken.corp.evernym.com/repo/portal_dev/upload"
                             sh "vcx/ci/scripts/publish.sh \"${KRAKEN_CREDENTIALS}\" \"libvcx*.deb\" https://kraken.corp.evernym.com/repo/agency_dev/upload"
                             
-                //             // ******** Publish Npm Package to filely repo ********
-                //             sh "/sdk/vcx/ci/scripts/publish.sh \"${KRAKEN_CREDENTIALS}\" \"*.tgz\" https://kraken.corp.evernym.com/repo/npm/upload"
+                            // ******** Publish Npm Package to filely repo ********
+                            sh "vcx/ci/scripts/publish.sh \"${KRAKEN_CREDENTIALS}\" \"*.tgz\" https://kraken.corp.evernym.com/repo/npm/upload"
                 
-                //             // ******** Publish vcx Debian To Repo (NPM PACKAGES) 
-                //             sh "/sdk/vcx/ci/scripts/publish.sh \"${KRAKEN_CREDENTIALS}\" \"vcx_*.deb\" https://kraken.corp.evernym.com/repo/agency_dev/upload"
-                //             sh "/sdk/vcx/ci/scripts/publish.sh \"${KRAKEN_CREDENTIALS}\" \"vcx_*.deb\" https://kraken.corp.evernym.com/repo/portal_dev/upload"
+                            // ******** Publish vcx Debian To Repo (NPM PACKAGES) 
+                            sh "vcx/ci/scripts/publish.sh \"${KRAKEN_CREDENTIALS}\" \"vcx_*.deb\" https://kraken.corp.evernym.com/repo/agency_dev/upload"
+                            sh "vcx/ci/scripts/publish.sh \"${KRAKEN_CREDENTIALS}\" \"vcx_*.deb\" https://kraken.corp.evernym.com/repo/portal_dev/upload"
 
-                //             // ******** Archive with Jenkins ********
-                //             sh "mkdir -p vcx/output"
-                //             sh "cp $volumeInternalDir/* vcx/output"
-                //             sh "ls $volumeInternalDir"
+                            // ******** Archive with Jenkins ********
                             archiveArtifacts allowEmptyArchive: true, artifacts: 'output/*'
-
                         }
                     }
                 }
-            // }
+            }
         } catch (Exception ex) {
             currentBuild.result = "FAILED"
             if (env.BRANCH_NAME == "master") {
