--- a/vcx/wrappers/java/vcx/build.gradle
+++ b/vcx/wrappers/java/vcx/build.gradle
@@ -64,6 +64,9 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    testOptions {
+        unitTests.returnDefaultValues = true
+    }
 
 }
 
@@ -131,6 +134,8 @@ dependencies {
     testImplementation group: 'junit', name: 'junit', version:'4.12'
     testImplementation group: 'commons-io', name: 'commons-io', version:'2.5'
     testImplementation group: 'org.json', name: 'json', version:'20160810'
+    testImplementation 'net.java.dev.jna:jna:4.5.0'
+    testImplementation 'org.awaitility:awaitility-scala:3.1.2'
 
 }
 
