--- a/vcx/ci/Jenkinsfile
+++ b/vcx/ci/Jenkinsfile
@@ -147,8 +147,12 @@ def android() {
                 parallel([
                     "x86" : { buildAndroid(android, 'x86') },
                     "arm" : { buildAndroid(android, 'arm') },
-                    "arm64" : { buildAndroid(android, 'arm64') }
+                    // "arm64" : { buildAndroid(android, 'arm64') }
                 ])
+
+                android.inside {
+                    sh "ls vcx/ci/scripts/runtime_android_build"
+                }
 
                 //Package .so files into .aar 
                 //packageAndroid(android)
@@ -227,14 +231,16 @@ def fail() {
 // }
 
 def buildAndroid(envn, arch) {    
-    envn.inside {
-        ANDROID_SCRIPT_PATH = 'vcx/ci/scripts/androidBuild.sh'
-        LIBINDY_BRANCH="stable"
-        LIBINDY_VERSION="1.6.2"
-        LIBINDY_TAG=""
+    node('ubuntu') {
+        envn.inside {
+            ANDROID_SCRIPT_PATH = 'vcx/ci/scripts/androidBuild.sh'
+            LIBINDY_BRANCH="stable"
+            LIBINDY_VERSION="1.6.2"
+            LIBINDY_TAG=""
 
-        sh 'sudo ./vcx/ci/scripts/installCert.sh'
-        sh "LIBINDY_BRANCH=${LIBINDY_BRANCH} LIBINDY_VERSION=${LIBINDY_VERSION} LIBINDY_TAG=${LIBINDY_TAG} ./${ANDROID_SCRIPT_PATH} ${arch}"
+            sh 'sudo ./vcx/ci/scripts/installCert.sh'
+            sh "LIBINDY_BRANCH=${LIBINDY_BRANCH} LIBINDY_VERSION=${LIBINDY_VERSION} LIBINDY_TAG=${LIBINDY_TAG} ./${ANDROID_SCRIPT_PATH} ${arch}"
+        }
    }
 }
 
